# chess-qt

./: .gitignore  CMakeLists.txt  README.md  svg.qrc
app/: CMakeLists.txt
data/: README.md
src/: Bishop.cpp  Bishop.hpp  BoardView.cpp  BoardView.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  DefaultSquareRenderer.cpp  DefaultSquareRenderer.hpp  Enums.hpp  ForsythEdwardsNotation.cpp  ForsythEdwardsNotation.hpp  IRenderer.hpp  King.cpp  King.hpp  KingJaqueRenderer.cpp  KingJaqueRenderer.hpp  Knight.cpp  Knight.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Model.cpp  Model.hpp  MoveListView.cpp  MoveListView.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  PotentialSquareRenderer.cpp  PotentialSquareRenderer.hpp  PreviousMoveRenderer.cpp  PreviousMoveRenderer.hpp  PromoteDefaultRenderer.cpp  PromoteDefaultRenderer.hpp  PromoteOptionRenderer.cpp  (+12 more)
tests/: CMakeLists.txt  main.cpp  test_fen.cpp  test_fen.hpp  test_piece.cpp  test_piece.hpp  test_position.cpp  test_position.hpp
